YBuild Update for Java21 #1028
Please check